--- a/db/db.html
+++ b/db/db.html
@@ -4,11 +4,11 @@
     	<title>Intro to Database</title>
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="db_style.css">
+	<link rel="stylesheet" href="./db__style.css">
 </head>
 <body>
 	<div class="menubar">
-		<h2>Introduction to MYSQL queries</h2>
+		<h2>Database Connectivity</h2>
 	</div>
 	<h4>Introduction</h4>
 	<p>
@@ -43,13 +43,13 @@
 		To begin, open up a MySQL prompt as your root MySQL user. Next, create the database by running:
 	</p>
 	<div class="exmp">
-		<xmp>	CREATE DATABASE `birthdays`;</xmp>
+		<xmp>CREATE DATABASE `birthdays`;</xmp>
 	</div>
 	<p>	
 		Then select this database by typing:
 	</p>
 	<div class="exmp">
-		<xmp>	USE birthdays;</xmp>
+		<xmp>USE birthdays;</xmp>
 	</div>
 	<p>
 		Next, create two tables within this database. We’ll use the first table to track your friends’ records at the bowling alley. The following command will create a table called tourneys with columns for the name of each of your friends, the number of tournaments they’ve won (wins), their all-time best score, and what size bowling shoe they wear (size):
@@ -217,5 +217,8 @@
 	<p>
 		This is the final step to test our project. If you wrote those codes properly it should be working properly.
 	</p>
+	<center>
+		<a href="../index.html" class="button">Go Back</a>
+	</center>
 </body>
 </html>
