--- a/db/db_books-java.html
+++ b/db/db_books-java.html
@@ -1,82 +1,73 @@
 <html>
 <head>
 <title>books.java</title>
+<link rel="stylesheet" href="db__style.css">
 </head>
 <body>
+<div class="menubar">
+	<h2>Database Connectivity</h2>
+</div>
+<div class="exmp">
 <xmp>
 public class books {
-    int id;
-    String bookName;
-    String bookDesc;
-    String authName;
-    String cat;
-
-    public books() {
-    }
-
-    public books(int id, String bookName, String bookDesc, String authName, String cat) {
-        this.id = id;
-        this.bookName = bookName;
-        this.bookDesc = bookDesc;
-        this.authName = authName;
-        this.cat = cat;
-    }
-
-    public books(String bookName, String bookDesc, String authName, String cat) {
-        this.bookName = bookName;
-        this.bookDesc = bookDesc;
-        this.authName = authName;
-        this.cat = cat;
-    }
-
-    public int getId() {
-        return id;
-    }
-
-    public void setId(int id) {
-        this.id = id;
-    }
-
-    public String getBookName() {
-        return bookName;
-    }
-
-    public void setBookName(String bookName) {
-        this.bookName = bookName;
-    }
-
-    public String getBookDesc() {
-        return bookDesc;
-    }
-
-    public void setBookDesc(String bookDesc) {
-        this.bookDesc = bookDesc;
-    }
-
-    public String getAuthName() {
-        return authName;
-    }
-
-    public void setAuthName(String authName) {
-        this.authName = authName;
-    }
-
-    public String getCat() {
-        return cat;
-    }
-
-    public void setCat(String cat) {
-        this.cat = cat;
-    }
-
-    @Override
-    public String toString() {
-        return "books{" + "id=" + id + ", bookName=" + bookName + ", bookDesc=" + bookDesc + ", authName=" + authName + ", cat=" + cat + '}';
-    }
-    
-    
+	int id;
+    	String bookName;
+    	String bookDesc;
+    	String authName;
+    	String cat;
+	public books() {
+    	}
+	public books(int id, String bookName, String bookDesc, String authName, String cat) {
+        	this.id = id;
+        	this.bookName = bookName;
+        	this.bookDesc = bookDesc;
+        	this.authName = authName;
+        	this.cat = cat;
+    	}
+	public books(String bookName, String bookDesc, String authName, String cat) {
+        	this.bookName = bookName;
+        	this.bookDesc = bookDesc;
+        	this.authName = authName;
+        	this.cat = cat;
+    	}
+	public int getId() {
+        	return id;
+    	}
+	public void setId(int id) {
+        	this.id = id;
+    	}
+	public String getBookName() {
+        	return bookName;
+    	}
+	public void setBookName(String bookName) {
+        	this.bookName = bookName;
+    	}
+	public String getBookDesc() {
+        	return bookDesc;
+    	}
+	public void setBookDesc(String bookDesc) {
+        	this.bookDesc = bookDesc;
+    	}
+	public String getAuthName() {
+        	return authName;
+    	}
+	public void setAuthName(String authName) {
+        	this.authName = authName;
+    	}
+	public String getCat() {
+        	return cat;
+    	}
+	public void setCat(String cat) {
+        	this.cat = cat;
+    	}
+	@Override
+    	public String toString() {
+        	return "books{" + "id=" + id + ", bookName=" + bookName + ", 
+			bookDesc=" + bookDesc + ", authName=" + authName + ", cat=" + cat + '}';
+    	}
 }
-
 </xmp>
+</div>
+<center><a href="db.html" class="button">Go Back</a></center>
 </body>
 </html>
