--- a/db/db.html
+++ b/db/db.html
@@ -4,7 +4,7 @@
     	<title>Intro to Database</title>
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="./db__style.css">
+	<link rel="stylesheet" href="./db_style.css">
 </head>
 <body>
 	<div class="menubar">
