inter basic css changes and js aligned

--- a/Internet Basics/Subtopic.html
+++ b/Internet Basics/Subtopic.html
@@ -8,8 +8,8 @@
     <title>Internet Basics</title>
 </head>
 <body>
-	<h1>INTERNET BASICS</h1>
-	</br>
+	<h2>INTERNET BASICS</h2>
+	<br><br><br>
 	<center>
 		<img src="ibimg.jpg" alt="Internet Basics" style="width:250px;height:250px;">
 	</center>
@@ -137,7 +137,8 @@
 		<br>
     		A Uniform Resource Locator (URL), colloquially termed a web address, is a reference to a web resource that specifies its location on a computer network and a mechanism for retrieving it. A URL is a specific type of Uniform Resource Identifier (URI), although many people use the two terms interchangeably. URLs occur most commonly to reference web pages (http) but are also used for file transfer (ftp), email (mailto), database access (JDBC), and many other applications. Most web browsers display the URL of a web page above the page in an address bar. A typical URL could have the form http://www.example.com/index.html, which indicates a protocol (http), a hostname (www.example.com), and a file name (index.html).
 	</p>
-    	<h4>Web standerds</h4>
-    	<h4>Audience Requirements</h4>
+	<center>
+		<a href="../index.html" class="button">Go Back</a>
+	</center>
 </body>
 </html>
