--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <ul><a href="./XML.html"> XML, XML Schemas, XML Stylesheet</a></ul>
         </div>
         <div class="row">
-          <ul><a href="./server.html">Server Side Technologies: Servlet and JSP </a> </ul>
+          <ul><a href="./server/server.html">Server Side Technologies: Servlet and JSP </a> </ul>
         </div>
         <div class="row">
           <ul><a href="./db/db.html"> Database Connectivity</a></ul>
