--- a/css3/css3.html
+++ b/css3/css3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="menubar">
-		<h2>Database Connectivity</h2>
+		<h2>CSS3</h2>
     </div>
         <h3>Introducton</h3>
         <p>CSS Tutorial
