--- a/afterhome.html
+++ b/afterhome.html
@@ -52,7 +52,7 @@
           <ul><a href="./JavaScript_Basic_and_Objects.html">JavaScript Basics and Objects</a></ul>
         </div>
         <div class="row">
-          <ul><a href="./js_event.html"> JavaScript Event handling and Form Validation</a></ul>
+          <ul><a href="./js event/js_event.html"> JavaScript Event handling and Form Validation</a></ul>
         </div>
         <div class="row">
           <ul><a href="./XML.html"> XML, XML Schemas, XML Stylesheet</a></ul>
