--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
         <div class="top">
           <ul><h1> Course Overview </h1></ul>
         </div>
+        <p>Learn the basic building blocks of Web design and style – HTML5 and CSS – to give your site a professional look and feel. We guide you step-by-step in how to use the latest Web standards to create a site to be proud of.</p>
+        <p>By the end of the course, you should understand all the fundamental elements – from headers and links to images and sidebars – and leave having built a basic framework for your own Web site.</p>
+        <div class="preview-expand-header d-flex position-relative"><h1 class="nav-target pt-3 mt-3 pt-sm-5 mt-sm-2" style="text-align: center;">What you'll learn</h1></div>
+        <ul>
+          <li>How to write a Web page</li>
+          <li>Concepts of a markup language</li>
+          <li>Basics of HTML5 and CSS</li>
+          <li>Web design and style</li>
+          <li>Page layout and flexbox</li>
+        </ul>
+        <br>
+        <h1>Syllabus</h1>
         <div class="row">
           <ul><a href="./Internet Basics/Subtopic.html" >Internet Basics</a></ul>
         </div>
