--- a/JavaScript_Basic_and_Objects.html
+++ b/JavaScript_Basic_and_Objects.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="db/db_style.css">
 </head>
 <body>
+    <h2>JavaScript Basic and Objects</h2>
     <h3>Introducton</h3>
         <p>Introduction JavaScript is the most popular scripting language on the internet, and
 works in all major browsers, such as Internet Explorer, Firefox,
@@ -835,7 +837,8 @@ Brackets ([]) have a special meaning when used in the context of regular express
     </tr>
     </tbody>
 </table>
-<p>In the following sections, we will have a few examples to demonstrate the usage of RegExp methods.</p>
-</p>
+<center>
+    <a href="../afterhome.html" class="button">Go Back</a>
+</center>
 </body>
 </html>
