--- a/XML.html
+++ b/XML.html
@@ -8,10 +8,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="db/db_style.css">
   </head>
   <body>
-      <ul>Introduction</ul>
-    <p>What is XML? 
+      <h2>Introduction</h2>
+      <p>What is XML? 
       <ul>XML stands for eXtensible Markup Language.</ul>
       <ul>It is considered “extensible ” because it allows the developer to create new tags.</ul>
       <ul>XML is a markup language much like HTML.</ul>
@@ -378,6 +379,9 @@ By using XML and XSLT, the application UI script will look clean and will be eas
 XSLT templates are based on XPath pattern which is very powerful in terms of performance to process the XML document.
 XSLT can be used as a validation language as it uses tree-pattern-matching approach.
 You can change the output simply modifying the transformations in XSL files.</p>
+<center>
+  <a href="../afterhome.html" class="button">Go Back</a>
+</center>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
