--- a/css3/css3.html
+++ b/css3/css3.html
@@ -2737,7 +2737,7 @@ Example
      </html>
 </xmp></div>  </p>
 <center>
-	<a href="../index.html" class="button">Go Back</a>
+  <a href="../afterhome.html" class="button">Go Back</a>
 </center>
 </body>
 </html>
