--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav me-auto mb-3 mb-lg-1">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="#"></a>
                 </li>
             </ul>
             <ul class="navbar-nav">
@@ -64,7 +64,7 @@
           <ul><a href="./JavaScript_Basic_and_Objects.html">JavaScript Basics and Objects</a></ul>
         </div>
         <div class="row">
-          <ul><a href="./js_event.html"> JavaScript Event handling and Form Validation</a></ul>
+          <ul><a href="./js event/js_event.html"> JavaScript Event handling and Form Validation</a></ul>
         </div>
         <div class="row">
           <ul><a href="./XML.html"> XML, XML Schemas, XML Stylesheet</a></ul>
@@ -77,6 +77,9 @@
         </div>
       </div>
     </div>
+    <center>
+      <a href="../afterhome.html" class="button">Go Back</a>
+    </center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
