--- a/server/server.html
+++ b/server/server.html
@@ -94,6 +94,9 @@
    <li><p>Then the servlet container handles multiple requests by spawning multiple threads, each thread executing the service() method of a single instance of the servlet.</p></li>
    </ul>
    <img src="https://www.tutorialspoint.com/servlets/images/servlet-lifecycle.jpg" alt="Servlet Life Cycle">
+   <center>
+      <a href="../afterhome.html" class="button">Go Back</a>
+    </center>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
