--- a/afterhome.html
+++ b/afterhome.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav me-auto mb-3 mb-lg-1">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="#"></a>
                 </li>
             </ul>
             <ul class="navbar-nav">
@@ -46,7 +46,7 @@
           <ul><a href="./HTML5/index.html">HTML 5</a></ul>
         </div>
         <div class="row">
-          <ul><a href="./css3.html">CSS 3</a></ul>
+          <ul><a href="css3/css3.html">CSS 3</a></ul>
         </div>
         <div class="row">
           <ul><a href="./JavaScript_Basic_and_Objects.html">JavaScript Basics and Objects</a></ul>
