--- a/db/db.html
+++ b/db/db.html
@@ -218,7 +218,7 @@
 		This is the final step to test our project. If you wrote those codes properly it should be working properly.
 	</p>
 	<center>
-		<a href="../index.html" class="button">Go Back</a>
+		<a href="../afterhome.html" class="button">Go Back</a>
 	</center>
 </body>
 </html>
